# salini_cpp_test

./: .gitignore  CMakeLists.txt  README.md
python/: create_db.py  main_client.py  main_client_gui.py
src/: CMakeLists.txt  start_booking_client.cpp  start_booking_server.cpp
src/booking/: Booking.cpp  Booking.h  CMakeLists.txt  Session.cpp  Session.h  Status.cpp  Status.h
src/booking_server/: BookingClient.cpp  BookingClient.h  BookingServer.cpp  BookingServer.h  CMakeLists.txt  string_operations.cpp  string_operations.h
test/: CMakeLists.txt  main_tests.cpp  test_movie_sessions.json
